--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "preinstall": "node ./scripts/install_ffmpeg.js",
+    "install": "echo Using prebuilt binary, use `npm run build` to compile locally",
+    "prebuild": "node ./scripts/install_ffmpeg.js",
     "build": "node-gyp rebuild",
     "make-prebuilt": "node ./scripts/make_prebuilt.js",
     "test": "tape test/*.js",
@@ -43,7 +44,7 @@
     "tape": "^5.5.2"
   },
   "optionalDependencies": {
-    "@roamhq/beamcoder-win32-x64": "0.8.0"
+    "@roamhq/beamcoder-win32-x64": "0.8.1"
   },
   "files": [
     "index.js",
